# TuxBallSDL

./: CMakeLists.txt  Project2.sln  README.md
Project2/: ColliderComponent.h  Collision.cpp  Collision.h  ECS.cpp  GameObject.cpp  GameObject.h  ParticleExample.cpp  ParticleExample.h  ParticleSystem.cpp  ParticleSystem.h  Point.h  Project2.vcxproj  Project2.vcxproj.filters  Rectagle.cpp  Rectagle.h  TextureManager.cpp  TextureManager.h  Tilecomponent.h  TuxBall.aps  animationHandle.cpp  animationHandle.h  game.cpp  game.hpp  inputHandler.h  main.cpp  resource.h  tilemapObj.cpp  tilemapObj.h  vectorHandler.cpp  vectorHandler.h
Project2/Debug/: vc142.idb
Project2/ECS/: Components.h  ECS.h  SpriteComponents.h  TransformComponent.h
Project2/const_assets/: Untitled.pyxel  logo.kra  map  map.png~  map.txt  map3.txt  terrain_ss.png~  tiles.kra  tiles.kra~  tiles.png~  tilesDec.kra
Project2/sprites/: tuxball.png~
assets/images/: tileTs.bmp~
assets/levels/: map3.txt
src/: ParticleExample.cpp  ParticleExample.h  ParticleSystem.cpp  ParticleSystem.h  collider_component.hpp  collision.cpp  collision.hpp  config.hpp  game.cpp  game.hpp  game_object.cpp  game_object.hpp  input_handler.hpp  level.cpp  level.hpp  level_data.cpp  level_data.hpp  main.cpp  point.hpp  rectangle.hpp  resource.h  singleton.hpp  texture_manager.cpp  texture_manager.hpp  tile_component.hpp  tilemap_object.cpp  tilemap_object.hpp  vectorHandler.cpp  vectorHandler.h  vector_math.cpp
src/ECS/: Components.h  ECS.cpp  ECS.h  SpriteComponents.h  TransformComponent.h
x64/Debug/: Project2.ilk  (+1 more)
(+23 files in other folders)
